--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <h1>My Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+    </nav>
     <div class="portfoilo-container">
       <div id="home">
         <h2>Home</h2>
